src/test/deca/syntax/invalid/mainOuvert.deca
// Description:
//    Main ouvert
//
// Resultats:
//    15:0: missing '}' at '<EOF>'


//
// Historique:
//    cree le 11/01/2024


{

println("Itachi Uchiwa");

